[FIX] sap.m.Link: enable context menu on iOS long press
Link preview and context menu now shows when long pressing on the Link
on iOS devices.

SNOW: DINC0595081

--- a/src/sap.m/src/sap/m/themes/base/Link.less
+++ b/src/sap.m/src/sap/m/themes/base/Link.less
@@ -10,6 +10,7 @@
 	font-family: var(--sapFontFamily);
 	font-size: @sapMFontMediumSize;
 	cursor: pointer;
+	-webkit-touch-callout: default;
 
 	&:visited {
 		color: var(--sapLink_Visited_Color);
